--- a/software/rcc_module12_V1/platformio.ini
+++ b/software/rcc_module12_V1/platformio.ini
@@ -23,6 +23,7 @@ platform = espressif32
 board = wemos_d1_mini32
 framework = arduino
 monitor_speed = 115200
+board_build.partitions = default.csv
 lib_deps =
   bblanchon/ArduinoJson@^6.21.1
   https://github.com/enginorama/DccAccessoryDecoder
